k8s/dpl-nginx-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-proxy
  name: nginx-proxy
  namespace: ns-nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/etc/nginx"
          name: vol-proxy-config
      volumes:
      - name: vol-proxy-config
        persistentVolumeClaim:
          claimName: pvc-nginx-proxy-config
