k8s/dpl-nginx-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-web
  name: nginx-web
  namespace: ns-nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: vol-web-content
        - mountPath: "/etc/nginx"
          name: vol-web-config
      volumes:
      - name: vol-web-content
        persistentVolumeClaim:
          claimName: pvc-nginx-web-content
      - name: vol-web-config
        persistentVolumeClaim:
          claimName: pvc-nginx-web-config
