k8s/svc-nginx-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-proxy
  name: svc-nginx-proxy
  namespace: ns-nginx-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-proxy
