k8s/svc-nginx-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-web
  name: svc-nginx-web
  namespace: ns-nginx-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-web
